# proyekgen

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Cargo.toml  README.md
deployment/: setup-x64.sh
deployment/src/: setup-x64.iss  setup-x64.sh
docs/artwork/: logo-alt.xcf  logo-light-alt.xcf  logo-light-sub.xcf  logo-light.xcf  logo-sub.xcf  logo.xcf
proyekgen/: CMakeLists.txt  cmdline.cpp  cmdline.h  config.cpp  config.h  console.cpp  console.h  error.cpp  error.h  generator.cpp  generator.h  global.h  input.cpp  input.h  logger.cpp  logger.h  main.cpp  proyekgen.cpp  proyekgen.h  system.cpp  system.h  template.cpp  template.h
setup/: deploy.bat  setup-x64.iss
src/: main.rs
templates/cmake-cpp/: configure.lua  info.json  project.tar.xz
templates/runners-test/: in.lua  info.json  out.lua
