[package]
name = "proyekgen"
authors = ["Feive Gian Borcillo <spir.0th.xyz@gmail.com>"]
license = "GPL-3.0-or-later"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
